--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.2.0",
@@ -21,6 +22,7 @@
     "mongoose": "^9.0.0",
     "morgan": "^1.9.1",
     "nodemon": "^3.1.11",
+    "pug": "^3.0.3",
     "slugify": "^1.3.4",
     "validator": "^13.15.23",
     "xss-clean": "^0.1.4"
