--- a/package.json
+++ b/package.json
@@ -15,20 +15,16 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.9.1",
     "nodemon": "^3.1.11",
     "pug": "^3.0.3",
     "slugify": "^1.3.4",
-    "validator": "^13.15.23",
-    "xss-clean": "^0.1.4"
+    "validator": "^13.15.23"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.2",
