--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.9.1",
@@ -24,7 +25,7 @@
     "validator": "^13.15.23"
   },
   "devDependencies": {
-    "eslint": "^9.39.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.2",
